--- a/style.css
+++ b/style.css
@@ -41,23 +41,47 @@ body {
 
 .header-wrap {
   color: orange;
-  border: 20px solid;
+  border: 30px solid;
   border-bottom: none;
-  max-width: 980px;
-  min-height: 470px;
+  max-width: 1280px;
+  min-height: 720px;
   margin: 80px auto 0;
-  padding: 50px 350px 50px 50px;
+  padding: 80px 500px 80px 80px;  
+  word-break: keep-all;
   box-sizing: border-box;
   background-image: url(./images/container-bg.png);
   background-repeat: no-repeat;
-  background-position: right 10% bottom;
+  background-size: 435px 612px;
+  background-position: right 5% bottom;
 }
 
 .items-wrap {  
-  max-width: 980px;
+  max-width: 1280px;;
   margin: 0 auto;
-  padding: 30px 0;
+  padding: 20px 0;
 
+}
+
+.items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.oak-items-list {
+  background-color: white;
+  border-radius: 6px;
+  overflow: hidden;
+  min-width: 400px;
+  margin: 20px 0;
+}
+
+.oak-items-list .list-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .list-cover-wrap {
@@ -66,15 +90,26 @@ body {
   border-bottom: 5px solid orange;
 }
 
+.footer {
+  background-color: white;
+  color: #999;
+  border-top: 3px solid;
+  text-align: center;
+  font-size: 1rem;
+  line-height: 4;
+  min-height: 300px;
+  letter-spacing: 0.6em;
+}
+/* 시작점부터 바닥까지 높이 차지하는법 찾아보기 */
+
 /* design */
 
 /* header */
 .header-title {
   letter-spacing: 0.2em;
-  font-size: 2rem;
+  font-size: 3rem;
   border-bottom: 8px solid;
   display: inline-block;
-  word-break: keep-all;
   margin-bottom: 50px;
 }
 
@@ -86,41 +121,34 @@ root 폰드를 조절하고 써야 할 까요?
 
 .header-sub {
   line-height: 1.5;
+  font-size: 1.4rem;
 }
 
 /* oak-items */
 .oak-items {
-  max-width: 300px;
   color: orange;
   font-weight: bold;
 }
 
-.oak-items-list {
-  background-color: white;
-  border-radius: 6px;
-  overflow: hidden;
-}
-
-.oak-items-list .list-cover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .oak-items-list .list-sub {
-  padding: 20px;
+  padding: 20px 70px 20px 20px;
   line-height: 1;
+  font-size: 1.5rem;
   position: relative;
+  display: block;
 }
 
-.oak-items-list .list-button {
+.oak-items-list .list-sub::after {
+  content: " ";
   background-image: url(./images/play.png);
-  position: absolute;
+  display: inline-block;
+  vertical-align: middle;
   width: 50px;
   height: 50px;
-  top: 4px;
-  right: 0;
   cursor: pointer;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  margin: auto 0;
 }
