--- a/style.css
+++ b/style.css
@@ -36,30 +36,28 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
-
 }
 
 .header-wrap {
   color: orange;
-  border: 30px solid;
+  border: 25px solid;
   border-bottom: none;
-  max-width: 1280px;
-  min-height: 720px;
+  max-width: 980px;
+  min-height: 550px;
   margin: 80px auto 0;
-  padding: 80px 500px 80px 80px;  
+  padding: 50px 310px 50px 50px;  
   word-break: keep-all;
   box-sizing: border-box;
   background-image: url(./images/container-bg.png);
   background-repeat: no-repeat;
-  background-size: 435px 612px;
-  background-position: right 5% bottom;
+  background-position: right 3% bottom;
 }
 
 .items-wrap {  
-  max-width: 1280px;;
+  max-width: 980px;;
   margin: 0 auto;
   padding: 20px 0;
-
+  position: relative;
 }
 
 .items {
@@ -72,7 +70,7 @@ body {
   background-color: white;
   border-radius: 6px;
   overflow: hidden;
-  min-width: 400px;
+  min-width: 300px;
   margin: 20px 0;
 }
 
@@ -86,20 +84,23 @@ body {
 
 .list-cover-wrap {
   padding-top: 76.5%;
-  position: relative;
   border-bottom: 5px solid orange;
+  position: relative;
 }
 
 .footer {
   background-color: white;
   color: #999;
   border-top: 3px solid;
+  padding: 20px 0;
   text-align: center;
   font-size: 1rem;
   line-height: 4;
-  min-height: 300px;
   letter-spacing: 0.6em;
 }
+
+
+
 /* 시작점부터 바닥까지 높이 차지하는법 찾아보기 */
 
 /* design */
@@ -107,7 +108,7 @@ body {
 /* header */
 .header-title {
   letter-spacing: 0.2em;
-  font-size: 3rem;
+  font-size: 2rem;
   border-bottom: 8px solid;
   display: inline-block;
   margin-bottom: 50px;
@@ -121,7 +122,7 @@ root 폰드를 조절하고 써야 할 까요?
 
 .header-sub {
   line-height: 1.5;
-  font-size: 1.4rem;
+  font-size: 1rem;
 }
 
 /* oak-items */
@@ -133,7 +134,7 @@ root 폰드를 조절하고 써야 할 까요?
 .oak-items-list .list-sub {
   padding: 20px 70px 20px 20px;
   line-height: 1;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   position: relative;
   display: block;
 }
@@ -151,4 +152,41 @@ root 폰드를 조절하고 써야 할 까요?
   bottom: 0;
   right: 10px;
   margin: auto 0;
+}
+
+@media screen and (max-width:1050px){
+  .header-wrap {
+    margin: 50px 50px 0;
+  }
+
+  .items-wrap {  
+    max-width: 980px;;
+    margin: 0 50px;
+    padding: 20px 0;
+    position: relative;
+  }
+
+  .header-wrap {
+    padding: 50px;  
+    box-sizing: border-box;
+    background-image: none;
+  }
+  
+  .oak-items-list {
+    min-width: 350px;
+    margin: 20px 0;
+  }
+}
+
+@media screen and (max-width:820px){
+  .oak-items-list {
+    min-width: 400px;
+    margin: 20px auto;
+  }
+}
+
+@media screen and (max-width:530px){
+  .header-wrap {
+    min-width: 430px;
+  }
 }
